# dbt-tutorial-template

./: .devcontainer.json  .env  .gitignore  .pdm-python  Makefile  README.md  dbt_profile.example  pyproject.toml
hello_world/: .user.yml  dbt_project.yml  profiles.yml
hello_world/models/example/: ticker_history.sql
