[project]
name = "dbt-tutorial-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jacob Matson", email = "idk@motherduck.com"},
]
dependencies = [
    "pipx",
    "dbt-duckdb~=1.8.0",
    "pandas==2.0",
    "numpy~=1.24",
    "pyarrow",
    "duckdb==1.1.0",
    "shandy-sqlfmt[jinjafmt]",
    "yfinance",
    "plotly",
    "dash",
    "python-dotenv",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
